--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>WDDSI Gathering</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<script type="text/javascript" src="about.js"></script>
 <script type="text/javascript" src="main.js"></script>
-<body onload="checkCookie()">
+<body onload="checkUserName(), checkBackgroundColor()" class="body" id="body">
     <h1>WDDSI Trivia Game</h1>
     <label for="user_name">Please give your name (or nickname):</label>
     <input type="text" id="user_name" name="user_name" onchange="onNameChange()">
