--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <script type="text/javascript" src="about.js"></script>
 <script type="text/javascript" src="main.js"></script>
-<body onload="checkUserName(), checkBackgroundColor()" class="body" id="body">
+<body onload="checkUserName(); checkBackgroundColor()" class="body" id="body">
     <h1>WDDSI Trivia Game</h1>
     <label for="user_name">Please give your name (or nickname):</label>
     <input type="text" id="user_name" name="user_name" onchange="onNameChange()">
