adjusting header text for results page and commenting out logs.

--- a/results.html
+++ b/results.html
@@ -9,11 +9,8 @@
 <script type="text/javascript" src="results.js"></script>
 <body onload="calculateResults(); checkBackgroundColor();" class="body" id="body">
     <div>
-        <h1 id="results-header"></h1>
+        <h1 id="results"></h1>
         <form class="results-form">
-            <div class="results-div">
-                <p id="results">Your results: </p>
-            </div>
             <br><br>
             <button id="done" onclick="finishQuiz()">Print Results</button>
         </form>
